# CompTIA-Acronym-Flashcards

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/comptia_flash/: __main__.py  comptia.py  constants.py
tests/: test_acronyms.py
